# cpplabs

./: .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
src/: BigInt.cpp  BigInt.h  BufferPipeline.cpp  BufferPipeline.h  CSVParser.cpp  CSVParser.h  ConfigParser.cpp  ConfigParser.h  Exceptions.cpp  Exceptions.h  MainUtils.cpp  MainUtils.h  Params.cpp  Params.h  Processor.cpp  Processor.h  Readonly.cpp  Readonly.h  StrNumPositive.cpp  StrNumPositive.h  WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h  WAVheader.h  header.h  main.cpp
src/Converters/: Converter.h  Converters.cpp  Converters.h  ConvertersFactory.cpp  ConvertersFactory.h  StreamLinker.cpp  StreamLinker.h
src/Params/: Params.cpp  Params.h
src/Reader/: Reader.cpp  Reader.h  WAVReader.cpp  WAVReader.h
src/Writer/: WAVWriter.cpp  WAVWriter.h  Writer.cpp  Writer.h
src/tests/: Tests.cpp  tests.cpp
src/tests/testFiles/: badCommentConfig.txt  badFormatConfig.txt  badLinkConfig1.txt  badLinkConfig2.txt  bigLinkConfig.txt  corruptedHeader  goodConfig.txt  goodConfigWithComments.txt  headerWithLIST  headerWithoutLIST  unsupportableFormatHeaderBlockAlign  unsupportableFormatHeaderFormat  unsupportableFormatHeaderSubChunk1Size  unsupportableFormatNumOfChannels
